--- a/авито/css/Main.css
+++ b/авито/css/Main.css
@@ -7,6 +7,10 @@
 	background-color: black;
 	height: 50px;
 }
+.MAINER {
+	height: 1000px;
+	background-color: white;
+}
 .Forbius {
 	
 	
@@ -22,6 +26,28 @@
 .lik, .authr {
 	text-decoration: none;
 	color: pink;
-	padding: 150px;
-	text-align: right;
+	float: right;
+	padding-right: 100px;
+	
 }
+.btn1 {
+	margin-left: 150px;
+	width: 150px;
+  height: 120px;
+  border: none;
+  background-image: url('https://png.klev.club/uploads/posts/2024-04/png-klev-club-0g3m-p-avito-png-1.png');
+  background-size: cover;
+}
+.btn1:hover {
+  opacity: 0.8;
+}
+
+.btn1:active {
+  transform: scale(0.95);
+}
+.FOOTER {
+	background-color: gray;
+	height: 300px;
+	text-align: left;
+}
+
